APP: statisztika kész

--- a/VS Solution/IKT_II_Derecske_Holding_EE/Ablakok/AdminPanel/AdminPanel.xaml
+++ b/VS Solution/IKT_II_Derecske_Holding_EE/Ablakok/AdminPanel/AdminPanel.xaml
@@ -76,7 +76,11 @@
                 </TabItem>
                 <TabItem Visibility="Hidden">
 
-                    <DataGrid Grid.Row="1" Margin="5" x:Name="TanarokGrid"></DataGrid>
+                    <DataGrid Grid.Row="1" Margin="5" x:Name="TanarokGrid" AutoGenerateColumns="False">
+                        <DataGrid.Columns>
+                            <DataGridTextColumn />
+                        </DataGrid.Columns>
+                    </DataGrid>
                 </TabItem>
                 <TabItem Visibility="Hidden">
                     <DataGrid Margin="5" x:Name="TanorakGrid"></DataGrid>
